--- a/Main Stats - Data.ipynb
+++ b/Main Stats - Data.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Player and Club Statistics Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the season URL\n",
+    "# Function to choose the appropriate season URL\n",
     "def foo_url(season):\n",
     "    if season == 2023:\n",
     "        return 'https://fbref.com/en/squads/18bb7c10/Arsenal-Stats'\n",
@@ -59,11 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to scrape\n",
+    "# Function that takes the season and desired stats we need to scrape then returns a table\n",
     "\n",
     "def foo_table(season, attribute):\n",
     "        \n",
@@ -85,19 +92,22 @@
     "        data.columns = new_columns \n",
     "\n",
     "        # Clean Data Accordingly\n",
-    "\n",
     "        clean_data = None\n",
     "\n",
     "        # Goalkeeping\n",
     "        if attribute == goalkeeping:\n",
     "            clean_data = data.iloc[:,[0,4,6,8,9,10,11,12,16,18,20]] # Filter Columns \n",
-    "            clean_data.rename(columns = {12: 'SavePercentage'}, inplace=True) # Rename Column Names\n",
+    "            clean_data.rename(columns = {'Save%': 'SavePercentage'}, inplace=True) # Rename Column Names\n",
     "\n",
     "        # Passing  \n",
     "        elif attribute == passing:\n",
     "             clean_data = data.iloc[:,[0,5,6,7,23,24,25]]\n",
-    "             clean_data.rename(columns = {7:'PassCompletionPercent',\n",
-    "                                          24: 'KeyPass_Final3rd'}, inplace=True)\n",
+    "             clean_data.rename(columns = {'Cmp' : 'CompletedPass',\n",
+    "                                          'Att' : 'AttemptedPass',\n",
+    "                                          'Cmp%':'PassCompletionPercent',\n",
+    "                                          'KP' : 'KeyPass',\n",
+    "                                          '1/3': 'KeyPass_Final3rd',\n",
+    "                                          'PPA' : 'PassesPenaltyArea'}, inplace=True)\n",
     "\n",
     "        # Shooting Stats  \n",
     "        elif attribute == shooting:\n",
@@ -123,6 +133,7 @@
     "        # Defensive     \n",
     "        elif attribute == defensive:\n",
     "             clean_data = data.iloc[:,[0,5,6,14,17,19]]\n",
+    "             clean_data.rename(columns = {'Int' : 'Interceptions'}, inplace=True)\n",
     "\n",
     "        # Miscellinious Stas     \n",
     "        elif attribute == miscell_stats:\n",
@@ -205,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,8 +260,8 @@
     "df_old_joined_goalkeeping, df_old_squad_goalkeeping = prepare(old_goalkeeping)\n",
     "df_old_joined_standard_stats, df_old_squad_standard_stats = prepare(old_standard_stats)\n",
     "\n",
-    "# Export\n",
     "\n",
+    "# Export\n",
     "# Standard Stats\n",
     "df_old_joined_standard_stats.to_csv(\"/Users/Razak/Desktop/Arsenal Database Project/scraped csv files/Raw csv/Old Season/All Stats/Player Stats/temp_players_standard_stats.csv\",\n",
     "index = False, encoding = 'utf-8-sig')\n",
@@ -310,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,6 +338,14 @@
     "\n",
     "\n",
     "    return df_joined_new, df_total_new"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Current Season Data\n",
+    "Run the code below to add new data for the current season to the existing data above, then export the updated data."
    ]
   },
   {
@@ -417,6 +436,281 @@
     "df_old_squad_goalkeeping = pd.read_csv(\"/Users/Razak/Desktop/Arsenal Database Project/scraped csv files/Raw csv/Old Season/All Stats/Club Stats/temp_club_goalkeeping_stats.csv\")\n",
     "updated_squad_goalkeeping = pd.concat([df_old_squad_goalkeeping, df_new_squad_goalkeeping])\n",
     "updated_squad_goalkeeping.to_csv(\"/Users/Razak/Desktop/Arsenal Database Project/scraped csv files/Raw csv/Updated tables/All Stats/Club Stats/temp_club_goalkeeping_stats.csv\", index=False, encoding = 'utf-8-sig')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Goals</th>\n",
+       "      <th>Shots</th>\n",
+       "      <th>ShotsonTarget</th>\n",
+       "      <th>ShotsonTargetPercent</th>\n",
+       "      <th>Shots_Per90</th>\n",
+       "      <th>ShotsonTarget_Per90</th>\n",
+       "      <th>GoalsPerShot</th>\n",
+       "      <th>GoalsPerShotsonTarget</th>\n",
+       "      <th>ShotDistance</th>\n",
+       "      <th>xG</th>\n",
+       "      <th>season_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Martin Ødegaard</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>22.5</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>2020-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Cédric Soares</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Ainsley Maitland-Niles</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>2020-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Joe Willock</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26.7</td>\n",
+       "      <td>1.58</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>2019-2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>Mathew Ryan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2020-2021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Player  Goals  Shots  ShotsonTarget  ShotsonTargetPercent  \\\n",
+       "46         Martin Ødegaard      1     15              3                  20.0   \n",
+       "25           Cédric Soares      1      1              1                 100.0   \n",
+       "50  Ainsley Maitland-Niles      0      2              1                  50.0   \n",
+       "18             Joe Willock      1     15              4                  26.7   \n",
+       "52             Mathew Ryan      0      0              0                   0.0   \n",
+       "\n",
+       "    Shots_Per90  ShotsonTarget_Per90  GoalsPerShot  GoalsPerShotsonTarget  \\\n",
+       "46         1.56                 0.31          0.07                   0.33   \n",
+       "25         0.36                 0.36          1.00                   1.00   \n",
+       "50         0.37                 0.18          0.00                   0.00   \n",
+       "18         1.58                 0.42          0.07                   0.25   \n",
+       "52         0.00                 0.00          0.00                   0.00   \n",
+       "\n",
+       "    ShotDistance   xG season_name  \n",
+       "46          22.5  0.7   2020-2021  \n",
+       "25          26.4  0.0   2019-2020  \n",
+       "50          20.9  0.1   2020-2021  \n",
+       "18          16.7  1.6   2019-2020  \n",
+       "52           0.0  0.0   2020-2021  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Desired Player Shooting Table\n",
+    "updated_shooting.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>CompletedPass</th>\n",
+       "      <th>AttemptedPass</th>\n",
+       "      <th>PassCompletionPercent</th>\n",
+       "      <th>KeyPass</th>\n",
+       "      <th>KeyPass_Final3rd</th>\n",
+       "      <th>PassesPenaltyArea</th>\n",
+       "      <th>season_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Squad Total</td>\n",
+       "      <td>16634</td>\n",
+       "      <td>20410</td>\n",
+       "      <td>81.5</td>\n",
+       "      <td>298</td>\n",
+       "      <td>1164</td>\n",
+       "      <td>311</td>\n",
+       "      <td>2019-2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Squad Total</td>\n",
+       "      <td>18041</td>\n",
+       "      <td>21807</td>\n",
+       "      <td>82.7</td>\n",
+       "      <td>332</td>\n",
+       "      <td>1377</td>\n",
+       "      <td>325</td>\n",
+       "      <td>2020-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Squad Total</td>\n",
+       "      <td>16176</td>\n",
+       "      <td>19843</td>\n",
+       "      <td>81.5</td>\n",
+       "      <td>437</td>\n",
+       "      <td>1354</td>\n",
+       "      <td>329</td>\n",
+       "      <td>2021-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Squad Total</td>\n",
+       "      <td>18281</td>\n",
+       "      <td>21969</td>\n",
+       "      <td>83.2</td>\n",
+       "      <td>443</td>\n",
+       "      <td>1637</td>\n",
+       "      <td>459</td>\n",
+       "      <td>2022-2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Squad Total</td>\n",
+       "      <td>12528</td>\n",
+       "      <td>14743</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>314</td>\n",
+       "      <td>1055</td>\n",
+       "      <td>336</td>\n",
+       "      <td>2023-2024</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Player  CompletedPass  AttemptedPass  PassCompletionPercent  KeyPass  \\\n",
+       "0  Squad Total          16634          20410                   81.5      298   \n",
+       "1  Squad Total          18041          21807                   82.7      332   \n",
+       "2  Squad Total          16176          19843                   81.5      437   \n",
+       "3  Squad Total          18281          21969                   83.2      443   \n",
+       "0  Squad Total          12528          14743                   85.0      314   \n",
+       "\n",
+       "   KeyPass_Final3rd  PassesPenaltyArea season_name  \n",
+       "0              1164                311   2019-2020  \n",
+       "1              1377                325   2020-2021  \n",
+       "2              1354                329   2021-2022  \n",
+       "3              1637                459   2022-2023  \n",
+       "0              1055                336   2023-2024  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Desired Club Passing Table\n",
+    "updated_squad_passing.head()"
    ]
   }
  ],
