--- a/Main Transfers & Player Scrape.ipynb
+++ b/Main Transfers & Player Scrape.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Club Transfers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -45,7 +52,7 @@
    "source": [
     "def departure(season):\n",
     "\n",
-    "    # Scrape the data\n",
+    "    # Scrape the data using BeautifulSoup\n",
     "    headers = {\n",
     "    \"User-Agent\" : \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36\"\n",
     "    }\n",
@@ -59,6 +66,7 @@
     "    odd_dept = soup.select('div[id=\"yw2\"] tr[class=\"odd\"]')\n",
     "    even_dept = soup.select('div[id=\"yw2\"] tr[class=\"even\"]')\n",
     "\n",
+    "    # Data Cleaning\n",
     "    # Departures 1/2\n",
     "    c_list = []\n",
     "    for i in range(len(odd_dept)):\n",
