--- a/Main Wages & Nationality.ipynb
+++ b/Main Wages & Nationality.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Player's Wages"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,15 +37,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Function to scrape - Wages"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,6 @@
     "df_wages_1922_list = pd.concat(dfs_to_concat, ignore_index=True)\n",
     "\n",
     "# Export table to .csv\n",
-    "# Export values\n",
     "df_wages_1922_list.to_csv(\"/Users/Razak/Desktop/Arsenal Database Project/scraped csv files/Raw csv/Old Season/temp_wages19-22_raw.csv\", index=False, encoding = 'utf-8-sig')"
    ]
   },
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,24 +104,132 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Nation</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Weekly Wages</th>\n",
+       "      <th>season_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Mohamed Elneny</td>\n",
+       "      <td>eg EGY</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>£ 50,000 (€ 59,628, $60,761)</td>\n",
+       "      <td>2020-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Calum Chambers</td>\n",
+       "      <td>eng ENG</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>£ 50,000 (€ 59,628, $60,761)</td>\n",
+       "      <td>2019-2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Eddie Nketiah</td>\n",
+       "      <td>eng ENG</td>\n",
+       "      <td>FW</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>£ 45,000 (€ 53,665, $54,685)</td>\n",
+       "      <td>2021-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>Kieran Tierney</td>\n",
+       "      <td>sct SCO</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>£ 110,000 (€ 127,861, $139,811)</td>\n",
+       "      <td>2022-2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>Marquinhos</td>\n",
+       "      <td>br BRA</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>£ 30,000 (€ 34,871, $38,130)</td>\n",
+       "      <td>2022-2023</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Player   Nation Pos   Age                     Weekly Wages  \\\n",
+       "45   Mohamed Elneny   eg EGY  MF  28.0     £ 50,000 (€ 59,628, $60,761)   \n",
+       "16   Calum Chambers  eng ENG  DF  24.0     £ 50,000 (€ 59,628, $60,761)   \n",
+       "73    Eddie Nketiah  eng ENG  FW  22.0     £ 45,000 (€ 53,665, $54,685)   \n",
+       "89   Kieran Tierney  sct SCO  DF  25.0  £ 110,000 (€ 127,861, $139,811)   \n",
+       "102      Marquinhos   br BRA  MF  19.0     £ 30,000 (€ 34,871, $38,130)   \n",
+       "\n",
+       "    season_name  \n",
+       "45    2020-2021  \n",
+       "16    2019-2020  \n",
+       "73    2021-2022  \n",
+       "89    2022-2023  \n",
+       "102   2022-2023  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined_season.sample(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Function to scrape - Nationality"
+    "# Player's Nationality"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Function takes the season, performs data cleaning and returns nationality\n",
     "def nationality(season):\n",
     "\n",
+    "    # Web scrape using Selenium\n",
     "    driver = webdriver.Chrome()\n",
-    "\n",
-    "    # Define a function that takes the desired season and inserts it into with various if statements\n",
     "\n",
     "    page_url = f\"https://fbref.com/en/squads/18bb7c10/{season}/roster/Arsenal-Roster-Details\"\n",
     "    driver.get(page_url) \n",
@@ -156,7 +263,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Historical Data"
+    "### Historical Data\n",
+    "Stores and saves data from past season, these ratings do not change threfore don't need to be ran frequently."
    ]
   },
   {
@@ -190,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,6 +313,78 @@
     "\n",
     "# export join (export and save as old+new updated table)\n",
     "joined_season.to_csv(\"/Users/Razak/Desktop/Arsenal Database Project/scraped csv files/Raw csv/Updated tables/temp_updatednationality_raw.csv\", index=False, encoding = 'utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nationality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>National Team: Estonia ee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>National Team: Ghana gh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>National Team: Bosnia and Herzegovina ba</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>National Team: Côte d'Ivoire ci</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>National Team: Ghana gh</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Nationality\n",
+       "70                 National Team: Estonia ee\n",
+       "57                   National Team: Ghana gh\n",
+       "6   National Team: Bosnia and Herzegovina ba\n",
+       "17           National Team: Côte d'Ivoire ci\n",
+       "38                   National Team: Ghana gh"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined_season.sample(5)"
    ]
   }
  ],
